crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__child_block_use.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>\n    @if x {\n        use Theme\n        <p>t</p>\n    }\n</div>\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 7,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 5,
                                column: 6,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 10,
                                            },
                                        },
                                        value: Var(
                                            "x",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 6,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Stmt(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 3,
                                                                column: 9,
                                                            },
                                                            end: Position {
                                                                line: 3,
                                                                column: 18,
                                                            },
                                                        },
                                                        value: Use(
                                                            Path {
                                                                segments: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 13,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 18,
                                                                            },
                                                                        },
                                                                        value: "Theme",
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 4,
                                                                column: 9,
                                                            },
                                                            end: Position {
                                                                line: 4,
                                                                column: 17,
                                                            },
                                                        },
                                                        value: Element(
                                                            Element {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 4,
                                                                            column: 10,
                                                                        },
                                                                        end: Position {
                                                                            line: 4,
                                                                            column: 11,
                                                                        },
                                                                    },
                                                                    value: Tag(
                                                                        "p",
                                                                    ),
                                                                },
                                                                attrs: [],
                                                                children: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 4,
                                                                                column: 12,
                                                                            },
                                                                            end: Position {
                                                                                line: 4,
                                                                                column: 13,
                                                                            },
                                                                        },
                                                                        value: Text(
                                                                            "t",
                                                                        ),
                                                                    },
                                                                ],
                                                                self_closing: false,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
