crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_for.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<ul>@for item in items { <li>{item}</li> }</ul>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 48,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Tag(
                        "ul",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 43,
                            },
                        },
                        value: For {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "item",
                                ),
                            },
                            iter: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                },
                                value: Var(
                                    "items",
                                ),
                            },
                            key: None,
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 43,
                                    },
                                },
                                value: ChildBlock {
                                    items: [
                                        Child(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 25,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 26,
                                                    },
                                                },
                                                value: Text(
                                                    " ",
                                                ),
                                            },
                                        ),
                                        Child(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 26,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 41,
                                                    },
                                                },
                                                value: Element(
                                                    Element {
                                                        name: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 1,
                                                                    column: 27,
                                                                },
                                                                end: Position {
                                                                    line: 1,
                                                                    column: 29,
                                                                },
                                                            },
                                                            value: Tag(
                                                                "li",
                                                            ),
                                                        },
                                                        attrs: [],
                                                        children: [
                                                            Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 1,
                                                                        column: 30,
                                                                    },
                                                                    end: Position {
                                                                        line: 1,
                                                                        column: 36,
                                                                    },
                                                                },
                                                                value: Hole(
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 1,
                                                                                column: 31,
                                                                            },
                                                                            end: Position {
                                                                                line: 1,
                                                                                column: 35,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "item",
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                        ],
                                                        self_closing: false,
                                                    },
                                                ),
                                            },
                                        ),
                                        Child(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 41,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 42,
                                                    },
                                                },
                                                value: Text(
                                                    " ",
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                            empty: None,
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
