crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_for_empty.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<ul>\n    @for item in items {\n        <li>{item}</li>\n    } @empty {\n        <li>Nothing here</li>\n    }\n</ul>\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 7,
            column: 6,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Tag(
                        "ul",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 6,
                                column: 6,
                            },
                        },
                        value: For {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "item",
                                ),
                            },
                            iter: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 23,
                                    },
                                },
                                value: Var(
                                    "items",
                                ),
                            },
                            key: None,
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 6,
                                    },
                                },
                                value: ChildBlock {
                                    items: [
                                        Child(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 9,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 24,
                                                    },
                                                },
                                                value: Element(
                                                    Element {
                                                        name: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 3,
                                                                    column: 10,
                                                                },
                                                                end: Position {
                                                                    line: 3,
                                                                    column: 12,
                                                                },
                                                            },
                                                            value: Tag(
                                                                "li",
                                                            ),
                                                        },
                                                        attrs: [],
                                                        children: [
                                                            Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 3,
                                                                        column: 13,
                                                                    },
                                                                    end: Position {
                                                                        line: 3,
                                                                        column: 19,
                                                                    },
                                                                },
                                                                value: Hole(
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 14,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 18,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "item",
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                        ],
                                                        self_closing: false,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                            empty: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 14,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 6,
                                        },
                                    },
                                    value: ChildBlock {
                                        items: [
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 5,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 5,
                                                            column: 30,
                                                        },
                                                    },
                                                    value: Element(
                                                        Element {
                                                            name: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 5,
                                                                        column: 10,
                                                                    },
                                                                    end: Position {
                                                                        line: 5,
                                                                        column: 12,
                                                                    },
                                                                },
                                                                value: Tag(
                                                                    "li",
                                                                ),
                                                            },
                                                            attrs: [],
                                                            children: [
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 5,
                                                                            column: 13,
                                                                        },
                                                                        end: Position {
                                                                            line: 5,
                                                                            column: 25,
                                                                        },
                                                                    },
                                                                    value: Text(
                                                                        "Nothing here",
                                                                    ),
                                                                },
                                                            ],
                                                            self_closing: false,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
